[Bug #21783] Fix documentation of {Method,UnboundMethod,Proc}#source_location